--- a/sparkly.html
+++ b/sparkly.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+	<title>RAINBOW ROAD</title>
+	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:700' rel='stylesheet' type='text/css'>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<style type="text/css">
 		#outside[id] {
@@ -17,14 +19,23 @@
 		#rainbow-text {
 			text-align: center;
 			font-size: 70px;
-			font-family: "arial narrow", fantasy;
 		}
 		body {
-			background: rgb(73,73,73); /* Old browsers */
-			background: linear-gradient(to bottom, rgba(73,73,73,1) 0%,rgba(40,52,59,1) 100%); /* W3C */
+			background: rgb(69,72,77); /* Old browsers */
+			background: -moz-linear-gradient(top, rgba(69,72,77,1) 0%, rgba(0,0,0,1) 100%); /* FF3.6+ */
+			background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(69,72,77,1)), color-stop(100%,rgba(0,0,0,1))); /* Chrome,Safari4+ */
+			background: -webkit-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Chrome10+,Safari5.1+ */
+			background: -o-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
+			background: -ms-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* IE10+ */
+			background: linear-gradient(to bottom, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* W3C */
+			font-family: 'Roboto Condensed', sans-serif;
 		}
 		#spacelord{
 			height:40%;
+		}
+		a {
+			color:orange;
+
 		}
 	</style>
 	<script>
@@ -73,14 +84,16 @@
 	<div id="outside">
 		<div id="middle">
 			<div id="rainbow-text">
-				wrwerwerwerwerw
+				A GIANT PYRAMID WHERE ONTO THE INSIDE WALLS FOOTAGE OF EVERY TIME YOU SHOULD'VE KISSED SOMEONE, BUT DIDN'T, IS PROJECTED. IT PLAYS FOREVER.
 			</div>
 		</div>
 	</div>
 	<div id="spacelord">
 	</div>
-	<textarea id="rainbow-input"></textarea>
-	<textarea id="url"></textarea>
+	<textarea id="rainbow-input">enter text here for MORE FUN</textarea><br>
+	<a href="https://twitter.com/YUNGLIKEAHORSE/status/297891307391696897">Link to original tweet</a>
+	<br>
+	<a href="https://github.com/airza/RainbowRoad">Github (why would you want this, christ)</a>
 </body>
 
 </html>
