--- a/weird.html
+++ b/weird.html
@@ -19,6 +19,7 @@
 		#rainbow-text {
 			text-align: center;
 			font-size: 70px;
+			font-family: 'Roboto Condensed', sans-serif;
 		}
 		body {
 			background: rgb(69,72,77); /* Old browsers */
@@ -28,12 +29,13 @@
 			background: -o-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* Opera 11.10+ */
 			background: -ms-linear-gradient(top, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* IE10+ */
 			background: linear-gradient(to bottom, rgba(69,72,77,1) 0%,rgba(0,0,0,1) 100%); /* W3C */
-			font-family: 'Roboto Condensed', sans-serif;
+
 		}
 		#spacelord{
 			height:40%;
 		}
-		a {
+		.hi {
+			font-family: 'Roboto Condensed', sans-serif;
 			color:orange;
 
 		}
@@ -91,9 +93,12 @@
 	<div id="spacelord">
 	</div>
 	<textarea id="rainbow-input">enter text here for MORE FUN</textarea><br>
-	<a href="https://twitter.com/YUNGLIKEAHORSE/status/297891307391696897">Link to original tweet</a>
+	<a class="hi" href="https://twitter.com/YUNGLIKEAHORSE/status/297891307391696897">Link to original tweet</a>
 	<br>
-	<a href="https://github.com/airza/RainbowRoad">Github (why would you want this, christ)</a>
+	<a class="hi" href="https://github.com/airza/RainbowRoad">Github (why would you want this, christ)</a>
+	<br>
+<a href="https://twitter.com/airzae" class="twitter-follow-button" data-show-count="false">Follow @airzae</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="http://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </body>
 
 </html>
