--- a/weird.html
+++ b/weird.html
@@ -79,7 +79,12 @@
 	}
 
 	window.setInterval(dancer,10);
-
+	var url = new URL(url_string);
+	var text = url.searchParams.get("text");
+	var encodedText = text.replace(/[\u00A0-\u9999<>\&]/g, function(i) {
+   return '&#'+i.charCodeAt(0)+';';
+});
+	document.getElementById("rainbow-text").innerHTML = encodedText
 	</script>
 </head>
 <body>
